Revised Final Edition 5.0
Changes in the structure and look of the website. (Home Page, Gallery, About Us, Events).

--- a/Gallery.html
+++ b/Gallery.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html#contactus">Contact Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
                 </ul>
             </div>
@@ -42,166 +42,79 @@
             <h2 style="margin: 5%;">Gallery</h2>
             <h1 style="font-family: Roboto; display: none;"><u>2021-22</u></h1>
         </div>
-    </div>
-    <div class="container body-container">
-        <div class="gallery-container w-3 h-2">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="img/gallery/2021-22/mic-drop.webp" alt="mic-drop">
-                </div>
-                <div class="text">Mic Drop</div>
+        <div class="grid">
+            <div class="grid-item">
+                <img src="/img/gallery/2021-22/beach-cleanup.webp" alt="Sample photo">
+                <p class="text">Beach Clean Up</p>
             </div>
-        </div>
-
-        <div class="gallery-container w-3 h-3">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/footslog4.webp" alt="footslog">
-                </div>
-                <div class="text">Foot Slog</div>
+            <div class="grid-item">
+                <img src="/img/gallery/2021-22/felcitation.webp" alt="Sample photo">
+                <p class="text">Felicitation</p>
             </div>
-        </div>
-
-        <div class="gallery-container h-2">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="img/gallery/2021-22/footslog.webp" alt="footslog">
-                </div>
-                <div class="text">Foot Slog</div>
+            <div class="grid-item">
+                <img src="/img/gallery/2021-22/mic-drop.webp" alt="Sample photo">
+                <p class="text">Mic Drop 2022</p>
             </div>
-        </div>
-
-        <div class="gallery-container w-2">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/mic-drop2.webp" alt="fitness">
-                </div>
-                <div class="text">Mic Drop</div>
+            <div class="grid-item">
+                <img src="/img/gallery/2021-22/footslog.webp" alt="Sample photo">
+                <p class="text">Footslog 2022</p>
             </div>
-        </div>
-
-        <div class="gallery-container w-4 h-1">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="img/gallery/2021-22/beach-cleanup.webp" alt="beach-cleanup">
-                </div>
-                <div class="text">Beach Cleanup</div>
+            <div class="grid-item">
+                <img src="/img/gallery/2021-22/footslog2.webp" alt="Sample photo">
+                <p class="text">Footslog 2022</p>
             </div>
-        </div>
-
-        <div class="gallery-container">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="img/gallery/2021-22/beach-cleanup1.webp" alt="beach-cleanup">
-                </div>
-                <div class="text">Beach Cleanup</div>
-            </div>
-        </div>
-        <div class="gallery-container w-3 h-2">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/felcitation.webp" alt="felcitation">
-                </div>
-                <div class="text">Felcitation</div>
-            </div>
-        </div>
-
-        <div class="gallery-container w-3 h-3">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/mic-drop3.webp" alt="mic-drop">
-                </div>
-                <div class="text">Mic Drop</div>
-            </div>
-        </div>
-
-        <div class="gallery-container h-2">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/mic-drop4.webp" alt="mic-drop">
-                </div>
-                <div class="text">Mic Drop</div>
-            </div>
-        </div>
-
-        <div class="gallery-container w-2">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/felicitation2.webp" alt="felcitation">
-                </div>
-                <div class="text">Felcitation</div>
-            </div>
-        </div>
-
-        <div class="gallery-container w-4 h-1">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="./img/gallery/2021-22/footslog3-1.webp" alt="food">
-                </div>
-                <div class="text">Foot Slog</div>
-            </div>
-        </div>
-
-        <div class="gallery-container">
-            <div class="gallery-item">
-                <div class="image">
-                    <img src="img/gallery/2021-22/footslog2.webp" alt="footslog">
-                </div>
-                <div class="text">Foot Slog</div>
+            <div class="grid-item">
+                <img src="/img/gallery/2021-22/mic-drop2.webp" alt="Sample photo">
+                <p class="text">Mic Drop 2022</p>
             </div>
         </div>
     </div>
 
-    <footer style="text-align: justify;">
+    <footer>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <h3 style="text-shadow: 2px 1px 1px  rgb(224, 192, 152); color: #800032;">Rotaract Club of CRCE</h3>
-                    <h4 style="text-shadow: 2px 1px 1px  rgb(224, 192, 152); color: #800032; text-align: center;">2022-23
+                    <h3 style="text-shadow: -1.5px 1.5px 2px rgb(224, 192, 152); color: #800032;">Rotaract Club of CRCE</h3>
+                    <h4 style="text-shadow: -1px 1px 1.5px  rgb(224, 192, 152); color: #800032; text-align: center;">
+                        2022-23
                         </h6>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-3 offset-1 col-sm-2">
+            <br>
+            <div class="row" style="justify-content: center;">
+                <div class="col-4">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="./aboutus.html">About Us</a></li>
-                        <li><a href="./events.html">Events</a></li>
                         <li><a href="./gallery.html">Gallery</a></li>
-                        <li><a href="./contactus.html">Contact Us</a></li>
+                        <li><a href="./events.html">Events</a></li>
+                        <li><a href="./index.html#contactus">Contact Us</a></li>
                         <li><a href="./report.html">Report</a></li>
                     </ul>
                 </div>
-                <div class="col-8 col-sm-6 col-md-5">
-                    <h5>Our Address</h5>
-                    <address style="color: floralwhite;">
-                        Fr. Agnel Ashram, Bandstand<br>
-                        Bandra (W), Mumbai 400050.<br>
-                        MH, IN<br>
-                        <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +919137835037/ +917798800444<br>
-                        <i style="color: pink;" class="fa fa-envelope fa-lg"></i>:
-                        <a href="mailto:confusion@food.net">rotaractcrce@gmail.com</a>
-                    </address>
+                <div class="col-8 col-md-4">
+                    <h5>Let's Connect</h5>
+                    <a class="btn btn-social-icon btn-instagram"
+                        style="margin: 3% 0%;" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i> : <p style="display: inline;">rotaract_crce</p></a>
+                    <br>
+                    <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/RCCRCE/"><i
+                            class="fa fa-facebook"></i> : <p style="display: inline;">RCCRCE</p></a>    
                 </div>
-                <div class="col-12 col-sm-3 col-md-4 align-self-center">
-                    <div class="text-center">
-                        Let's Connect:<br><br>
-                        <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/RCCRCE/"><i
-                                class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
-                                class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
-                                class="fa fa-youtube"></i></a>
-                    </div>
-                </div>
+                <!-- <div class="col-4">
+                    <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
+                        class="fa fa-linkedin"></i></a>
+                    <br>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                            class="fa fa-youtube"></i></a>
+                </div> -->
             </div>
         </div>
         <br>
-        <div class="footer-bottom">
+        <div class="footer-end">
             <div class="col-auto">
-                <p style="font-size:large;"> Developed By <span><a style="color: maroon; font-weight:bold; text-decoration: none;" href="https://www.linkedin.com/in/jinish-varaiya-19aba6168/">Rtr. Jinish Varaiya</a></span></p>
+                 Developed By 
+                <span><a href="https://www.linkedin.com/in/jinish-varaiya-19aba6168/">Rtr. Jinish Varaiya</a></span>
             </div>
         </div>
     </footer>
