--- a/Gallery.html
+++ b/Gallery.html
@@ -36,37 +36,35 @@
             </div>
         </div>
     </nav>
-    
-    <div class="container">
-        <div class="col-12" style="padding: 30px 0px;">
-            <h2 style="margin: 5%;">Gallery</h2>
-            <h1 style="font-family: Roboto; display: none;"><u>2021-22</u></h1>
+
+    <div class="col-12" style="padding: 30px 0px;">
+        <h2 style="margin: 5%;">Gallery</h2>
+        <h1 style="font-family: Roboto; display: none;"><u>2021-22</u></h1>
+    </div>
+    <div class="grid">
+        <div class="grid-item">
+            <img src="/img/gallery/2021-22/beach-cleanup.webp" alt="Sample photo">
+            <p class="text">Beach Clean Up</p>
         </div>
-        <div class="grid">
-            <div class="grid-item">
-                <img src="/img/gallery/2021-22/beach-cleanup.webp" alt="Sample photo">
-                <p class="text">Beach Clean Up</p>
-            </div>
-            <div class="grid-item">
-                <img src="/img/gallery/2021-22/felcitation.webp" alt="Sample photo">
-                <p class="text">Felicitation</p>
-            </div>
-            <div class="grid-item">
-                <img src="/img/gallery/2021-22/mic-drop.webp" alt="Sample photo">
-                <p class="text">Mic Drop 2022</p>
-            </div>
-            <div class="grid-item">
-                <img src="/img/gallery/2021-22/footslog.webp" alt="Sample photo">
-                <p class="text">Footslog 2022</p>
-            </div>
-            <div class="grid-item">
-                <img src="/img/gallery/2021-22/footslog2.webp" alt="Sample photo">
-                <p class="text">Footslog 2022</p>
-            </div>
-            <div class="grid-item">
-                <img src="/img/gallery/2021-22/mic-drop2.webp" alt="Sample photo">
-                <p class="text">Mic Drop 2022</p>
-            </div>
+        <div class="grid-item">
+            <img src="/img/gallery/2021-22/felcitation.webp" alt="Sample photo">
+            <p class="text">Felicitation</p>
+        </div>
+        <div class="grid-item">
+            <img src="/img/gallery/2021-22/mic-drop.webp" alt="Sample photo">
+            <p class="text">Mic Drop 2022</p>
+        </div>
+        <div class="grid-item">
+            <img src="/img/gallery/2021-22/footslog.webp" alt="Sample photo">
+            <p class="text">Footslog 2022</p>
+        </div>
+        <div class="grid-item">
+            <img src="/img/gallery/2021-22/footslog2.webp" alt="Sample photo">
+            <p class="text">Footslog 2022</p>
+        </div>
+        <div class="grid-item">
+            <img src="/img/gallery/2021-22/mic-drop2.webp" alt="Sample photo">
+            <p class="text">Mic Drop 2022</p>
         </div>
     </div>
 
@@ -74,7 +72,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <h3 style="text-shadow: -1.5px 1.5px 2px rgb(224, 192, 152); color: #800032;">Rotaract Club of CRCE</h3>
+                    <h3 style="text-shadow: -1.5px 1.5px 2px rgb(224, 192, 152); color: #800032;">Rotaract Club of CRCE
+                    </h3>
                     <h4 style="text-shadow: -1px 1px 1.5px  rgb(224, 192, 152); color: #800032; text-align: center;">
                         2022-23
                         </h6>
@@ -95,11 +94,12 @@
                 </div>
                 <div class="col-8 col-md-4">
                     <h5>Let's Connect</h5>
-                    <a class="btn btn-social-icon btn-instagram"
-                        style="margin: 3% 0%;" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i> : <p style="display: inline;">rotaract_crce</p></a>
+                    <a class="btn btn-social-icon btn-instagram" style="margin: 3% 0%;"
+                        href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i> : <p
+                            style="display: inline;">rotaract_crce</p></a>
                     <br>
                     <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/RCCRCE/"><i
-                            class="fa fa-facebook"></i> : <p style="display: inline;">RCCRCE</p></a>    
+                            class="fa fa-facebook"></i> : <p style="display: inline;">RCCRCE</p></a>
                 </div>
                 <!-- <div class="col-4">
                     <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
@@ -113,14 +113,19 @@
         <br>
         <div class="footer-end">
             <div class="col-auto">
-                 Developed By 
+                Developed By
                 <span><a href="https://www.linkedin.com/in/jinish-varaiya-19aba6168/">Rtr. Jinish Varaiya</a></span>
             </div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+        integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
