--- a/Events.html
+++ b/Events.html
@@ -40,12 +40,25 @@
             <div id="latestEvent" class="col-12" style="text-align: center;">
                 <div class="container">
                     <div class="col-12 jumbotron" style="position:relative; margin-top: 5%;">
-                        <img src="img/events/beachcleanup.webp" alt="">
+                        <img src="img/index/HSR.webp" alt="">
                     </div>
-                    <button class="btn reg-event">Register</button>
+                    <button class="btn reg-event" onclick="window.location.href='https://www.townscript.com/e/heart-and-sole-run-5-340243'">Register</button>
                 </div>
             </div>
         </div>
+
+        <div id="eventSponsors" class="row row-content">
+            <h1>Our  Sponsors</h1>
+             <section class="customer-logos slider">
+                <div class="slide"><img src="https://image.freepik.com/free-vector/luxury-letter-e-logo-design_1017-8903.jpg"></div>
+                <div class="slide"><img src="https://image.freepik.com/free-vector/3d-box-logo_1103-876.jpg"></div>
+                <div class="slide"><img src="https://image.freepik.com/free-vector/blue-tech-logo_1103-822.jpg"></div>
+                <div class="slide"><img src="https://image.freepik.com/free-vector/colors-curl-logo-template_23-2147536125.jpg"></div>
+                <div class="slide"><img src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg"></div>
+                <div class="slide"><img src="https://image.freepik.com/free-vector/football-logo-background_1195-244.jpg"></div>
+                <div class="slide"><img src="https://image.freepik.com/free-vector/background-of-spots-halftone_1035-3847.jpg"></div>
+             </section>
+          </div>
 
         <div class="row row-content justify-content-center" style="border: none;">
             <div id="communityServiceEvents" class="col-10">
@@ -247,6 +260,7 @@
         <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
