--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-    <div class="col-12" style="color: whitesmoke; background-color:rgba(30, 30, 81, 0.9); padding: 8% 0%;">
+    <div id="aboutUs" class="col-12" style="color: whitesmoke; padding: 8% 0%;">
         <br>
         <h1 style="font-family: OpenSans;">About Us</h1>
         <div class="row row-content justify-content-center" style="border: none;">
@@ -85,7 +85,7 @@
                 young men and woman to enhance the knowledge and skills that will assist them in personal
                 development, to address the physical and social needs of their communities, and to promote better
                 relationships between all people worldwide, through a framework of friendship and service..<a
-                    href="./AboutUs.html" style="font-weight: bold; color: teal; text-decoration: none;">Read
+                    href="./AboutUs.html" style="font-weight: bold; color: gold; text-decoration: none;">Read
                     More</a></p>
         </div>
     </div>
@@ -98,21 +98,59 @@
         <div class="container">
             <div id="eventCarousel" class="carousel" data-bs-ride="carousel">
                 <div class="carousel-inner col-10 col-md-12">
+                    <div class="carousel-item active">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="img/index/HSR.webp" width="100%" height="200px">
+                                <dl class="row" style="padding-top: 4%;">
+                                    <dt class="col-3 offset-1">Event</dt>
+                                    <dd class="col-7">THE HEART & SOLE RUN 5 🏃</dd>
+                                    <dt class="col-3 offset-1">Date</dt>
+                                    <dd class="col-7">19th March 2023</dd>
+                                    <dt class="col-3 offset-1">Details</dt>
+                                    <dd class="col-8 col-xl-7">The Rotaract Club of Fr. CRCE is back with the fifth edition of its Annual
+                                        Charity Run for Fr. Agnel Ashram.</dd>
+                                </dl>
+                                <div class="row justify-content-center">
+                                    <button class="reg-btn2 btn col-6 col-sm-4" onclick="window.location.href = 'https://www.townscript.com/e/heart-and-sole-run-5-340243'"><span>Register</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
-                                <div class="img-wrapper">
-                                    <img src="img/index/Installation.webp">
-                                </div>
+                                <img src="img/index/start-up seminar.webp" width="100%" height="200px">
                                 <dl class="row" style="padding-top: 4%;">
                                     <dt class="col-3 offset-1">Event</dt>
-                                    <dd class="col-7">Atraxia</dd>
+                                    <dd class="col-7">Start-up Seminar</dd>
                                     <dt class="col-3 offset-1">Date</dt>
-                                    <dd class="col-7">29th August 2022.</dd>
+                                    <dd class="col-7">12th October 2022</dd>
                                     <dt class="col-3 offset-1">Details</dt>
-                                    <dd class="col-7">Installation Ceremony of incoming
-                                        President Mathew Lobo and his team and bidding adieu to the Past
-                                        President Sifra Biju.</dd>
+                                    <dd class="col-8 col-xl-7">Seminar conducted on Business plan and Startup Life cycle
+                                        with speakers: Mr.Mohammed Ahmed, Mr.Rahil Dhami.</dd>
+                                </dl>
+                                <div class="row justify-content-center">
+                                    <button class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="img/index/beachcleanup.webp" width="100%" height="200px">
+                                <dl class="row" style="padding-top: 4%;">
+                                    <dt class="col-3 offset-1">Event</dt>
+                                    <dd class="col-7">Beach Clean Up</dd>
+                                    <dt class="col-3 offset-1">Date</dt>
+                                    <dd class="col-7">09th October 2022</dd>
+                                    <dt class="col-3 offset-1">Details</dt>
+                                    <dd class="col-8 col-xl-7">Beach Clean Up event is an initiative by us to keep our
+                                        environment clean. So "&#10024; Leave nothing on the beach but footprints
+                                        &#10024;"</dd>
                                 </dl>
                                 <div class="row justify-content-center">
                                     <button class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
@@ -142,63 +180,24 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item active">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="img/index/beachcleanup.webp" width="100%" height="200px">
-                                <dl class="row" style="padding-top: 4%;">
-                                    <dt class="col-3 offset-1">Event</dt>
-                                    <dd class="col-7">Beach Clean Up</dd>
-                                    <dt class="col-3 offset-1">Date</dt>
-                                    <dd class="col-7">09th October 2022</dd>
-                                    <dt class="col-3 offset-1">Details</dt>
-                                    <dd class="col-8 col-xl-7">Beach Clean Up event is an initiative by us to keep our
-                                        environment clean. So "&#10024; Leave nothing on the beach but footprints
-                                        &#10024;"</dd>
-                                </dl>
-                                <div class="row justify-content-center">
-                                    <button class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
-                                <img src="img/index/start-up seminar.webp" width="100%" height="200px">
+                                <div class="img-wrapper">
+                                    <img src="img/index/Installation.webp">
+                                </div>
                                 <dl class="row" style="padding-top: 4%;">
                                     <dt class="col-3 offset-1">Event</dt>
-                                    <dd class="col-7">Start-up Seminar</dd>
+                                    <dd class="col-7">Atraxia</dd>
                                     <dt class="col-3 offset-1">Date</dt>
-                                    <dd class="col-7">12th October 2022</dd>
+                                    <dd class="col-7">29th August 2022.</dd>
                                     <dt class="col-3 offset-1">Details</dt>
-                                    <dd class="col-8 col-xl-7">Seminar conducted on Business plan and Startup Life cycle
-                                        with speakers: Mr.Mohammed Ahmed, Mr.Rahil Dhami.</dd>
+                                    <dd class="col-7">Installation Ceremony of incoming
+                                        President Mathew Lobo and his team and bidding adieu to the Past
+                                        President Sifra Biju.</dd>
                                 </dl>
                                 <div class="row justify-content-center">
                                     <button class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="img/index/coming-soon.webp" width="100%" height="200px">
-                                <dl class="row" style="padding-top: 4%;">
-                                    <dt class="col-3 offset-1">Event</dt>
-                                    <dd class="col-7">Name</dd>
-                                    <dt class="col-3 offset-1">Date</dt>
-                                    <dd class="col-7">To be announced</dd>
-                                    <dt class="col-3 offset-1">Details</dt>
-                                    <dd class="col-8 col-xl-7">The details of the event will be uploaded soon once
-                                        the
-                                        event is announced to be conducted officially by the club members</dd>
-                                </dl>
-                                <div class="row justify-content-center">
-                                    <button class="reg-btn3 btn col-6 col-sm-4"><span>Register</span></button>
                                 </div>
                             </div>
                         </div>
@@ -278,8 +277,8 @@
                     style="border: 3px solid black;border-radius: 5%; width: 100%; height: 400px"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7542.58353090316!2d72.8171557!3d19.0509054!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9410830616d%3A0x111b63353dbbce01!2sFr.%20Conceicao%20Rodrigues%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1601012404908!5m2!1sen!2sin"
                     frameborder="0"
-                    allowfullscreen
-                ></iframe>
+                    allowfullscreen>
+                </iframe>
             </div>
             <div class="col-12 col-lg-6" >
                 <div class="row justify-content-center" style="padding: 40px 0px 0px 0px;">
@@ -304,38 +303,51 @@
         </div>
     </div>
 
-    <div class="row row-content justify-content-center" style="margin-bottom: 10%; background-color: rgba(0,128,128,0.8); color: rgb(0, 0, 100);">
-        <div class="col-10">
-            <h1>Your Feedback</h1>
+    <div class="row" style="background-color: white; color: rgb(0, 0, 100); padding: 5%;">
+        <div class="col-12">
+            <h1>Send Us Your Feedback</h1>
             <br>
-            <center>
-                <form>
-                    <div class="feedback-form">
-                        <div class="col-md-5">
-                            <input type="text" class="form-control" id="name" name="name"
-                                placeholder="Name" required>
-                        </div>
-                        <br>
-                        <div class="col-md-5">
-                            <input type="text" pattern="[a-z 0-9]+@[a-z]+\.[a-z]{3}(\.[a-z]{2})?" class="form-control" id="email" name="email"
+            <form>
+                <div class="feedback-form">
+                    <div class="row justify-content-center">
+                        <div class="col-8 col-md-4">
+                            <input type="email" pattern="[a-z 0-9]+@[a-z]+\.[a-z]{3}(\.[a-z]{2})?" class="form-control" id="email" name="email"
                             placeholder="Email Address" required>
                         </div>
-                        <br>
-                        <div class="col-md-5">
-                            <textarea placeholder="Comment" class="form-control" id="feedback" name="feedback"
-                            rows="12" required></textarea>
+                        <div class="col-8 mt-3 mt-md-0 col-md-6">
+                            <input type="text" placeholder="Your Feedback" class="form-control" id="feedback" name="feedback"
+                            rows="12" required>
                         </div>
-                        <br>
-                        <div class="col-md-5">
+
+                        <div class="col-8  mt-3 mt-md-0 col-md-1">
                             <button type="submit" class="btn">
-                                Submit
+                                Send
                             </button>
                         </div>
                     </div>
-                </form>
-            </center>
+                </div>
+            </form>
         </div>
     </div>
+
+    <div id="eventSponsors" class="row row-content" style="background-color: rgb(16, 145, 196);">
+        <h1>Our  Sponsors</h1>
+        <section class="customer-logos slider">
+        <div class="slide"><img src="./img/Sponsors/logo (1).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (2).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (3).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (4).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (5).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (6).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (7).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (8).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (10).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (11).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (12).webp"></div>
+        <div class="slide"><img src="./img/Sponsors/logo (13).webp"></div>
+        </section>
+    </div>
+
     <footer>
         <div class="container">
             <div class="row justify-content-center">
@@ -343,7 +355,7 @@
                     <h3 style="text-shadow: -1.5px 1.5px 2px rgb(224, 192, 152); color: #800032;">Rotaract Club of CRCE</h3>
                     <h4 style="text-shadow: -1px 1px 1.5px  rgb(224, 192, 152); color: #800032; text-align: center;">
                         2022-23
-                        </h6>
+                        </h4>
                 </div>
             </div>
             <br>
@@ -392,6 +404,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <script src="index-script.js"></script>
     <script src="script.js"></script>
 </body>
