HSR Post Event Commit

--- a/Events.html
+++ b/Events.html
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div id="eventSponsors" class="row row-content">
+        <div id="eventSponsors" class="row row-content" style="background-color: rgb(16, 145, 196);">
             <h1>Our  Sponsors</h1>
              <section class="customer-logos slider">
                 <div class="slide"><img src="https://image.freepik.com/free-vector/luxury-letter-e-logo-design_1017-8903.jpg"></div>
