--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                         Charity Run for Fr. Agnel Ashram.</dd>
                                 </dl>
                                 <div class="row justify-content-center">
-                                    <button class="reg-btn2 btn col-6 col-sm-4" onclick="window.location.href = 'https://www.townscript.com/e/heart-and-sole-run-5-340243'"><span>Register</span></button>
+                                    <button class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
                                 </div>
                             </div>
                         </div>
