Termination & Renewal Of Website Commit
Last few updations to simplify the code before the website gets renewed.

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
     </div>
 
-    <div id="eventSponsors" class="row row-content" style="background-color: rgb(16, 145, 196);">
+    <div id="eventSponsors" class="row row-content">
         <h1>Our  Sponsors</h1>
         <section class="customer-logos slider">
         <div class="slide"><img src="./img/Sponsors/logo (1).webp"></div>
