--- a/Events.html
+++ b/Events.html
@@ -47,18 +47,23 @@
             </div>
         </div>
 
-        <div id="eventSponsors" class="row row-content" style="background-color: rgb(16, 145, 196);">
+        <div id="eventSponsors" class="row row-content">
             <h1>Our  Sponsors</h1>
-             <section class="customer-logos slider">
-                <div class="slide"><img src="https://image.freepik.com/free-vector/luxury-letter-e-logo-design_1017-8903.jpg"></div>
-                <div class="slide"><img src="https://image.freepik.com/free-vector/3d-box-logo_1103-876.jpg"></div>
-                <div class="slide"><img src="https://image.freepik.com/free-vector/blue-tech-logo_1103-822.jpg"></div>
-                <div class="slide"><img src="https://image.freepik.com/free-vector/colors-curl-logo-template_23-2147536125.jpg"></div>
-                <div class="slide"><img src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg"></div>
-                <div class="slide"><img src="https://image.freepik.com/free-vector/football-logo-background_1195-244.jpg"></div>
-                <div class="slide"><img src="https://image.freepik.com/free-vector/background-of-spots-halftone_1035-3847.jpg"></div>
-             </section>
-          </div>
+            <section class="customer-logos slider">
+            <div class="slide"><img src="./img/Sponsors/logo (1).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (2).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (3).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (4).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (5).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (6).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (7).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (8).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (10).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (11).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (12).webp"></div>
+            <div class="slide"><img src="./img/Sponsors/logo (13).webp"></div>
+            </section>
+        </div>
 
         <div class="row row-content justify-content-center" style="border: none;">
             <div id="communityServiceEvents" class="col-10">
